Fix: Using Scroller with SearchPanes could break the show / hide toggle
gh#34

--- a/css/common.scss
+++ b/css/common.scss
@@ -327,7 +327,8 @@ div.dtsp-panesContainer {
 	}
 }
 
-div.dtsp-hidden{
+div.dtsp-hidden,
+div.dts.dtsp-hidden {
 	display: none !important;
 }
 
